// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gRCP service definitions generates grpc service definition: test.proto_message 1`] = `
"/**
 *       ***************************************
 *          AUTOGENERATED FILE - DO NOT EDIT
 *       ***************************************
 *
 * This file was generated by grpc-tools-node-protoc-promise-ts
 * https://github.com/rhinodavid/grpc-tools-node-protoc-promise-ts
 *
 * package: test
 * file: test.proto
 * generated at: Mon Sep 21 2020 03:15:20 GMT-0600 (Mountain Daylight Time)
 */

/* tslint:disable */
/* eslint-disable */

import * as jspb from \\"google-protobuf\\";
export class MessageA extends jspb.Message {
  getInt(): number;
  setInt(value: number): MessageA;

  serializeBinary(): Uint8Array;
  toObject(includeInstance?: boolean): MessageA.AsObject;
  static toObject(includeInstance: boolean, msg: MessageA): MessageA.AsObject;
  static extensions: { [key: number]: jspb.ExtensionFieldInfo<jspb.Message> };
  static extensionsBinary: {
    [key: number]: jspb.ExtensionFieldBinaryInfo<jspb.Message>;
  };
  static serializeBinaryToWriter(
    message: MessageA,
    writer: jspb.BinaryWriter
  ): void;
  static deserializeBinary(bytes: Uint8Array): MessageA;
  static deserializeBinaryFromReader(
    message: MessageA,
    reader: jspb.BinaryReader
  ): MessageA;
}

export namespace MessageA {
  export type AsObject = {
    pb_int: number;
  };
}

export class MessageB extends jspb.Message {
  getInt(): number;
  setInt(value: number): MessageB;

  serializeBinary(): Uint8Array;
  toObject(includeInstance?: boolean): MessageB.AsObject;
  static toObject(includeInstance: boolean, msg: MessageB): MessageB.AsObject;
  static extensions: { [key: number]: jspb.ExtensionFieldInfo<jspb.Message> };
  static extensionsBinary: {
    [key: number]: jspb.ExtensionFieldBinaryInfo<jspb.Message>;
  };
  static serializeBinaryToWriter(
    message: MessageB,
    writer: jspb.BinaryWriter
  ): void;
  static deserializeBinary(bytes: Uint8Array): MessageB;
  static deserializeBinaryFromReader(
    message: MessageB,
    reader: jspb.BinaryReader
  ): MessageB;
}

export namespace MessageB {
  export type AsObject = {
    pb_int: number;
  };
}
"
`;

exports[`gRCP service definitions generates grpc service definition: test.proto_promise_service 1`] = `
"/**
 *       ***************************************
 *          AUTOGENERATED FILE - DO NOT EDIT
 *       ***************************************
 *
 * This file was generated by grpc-tools-node-protoc-promise-ts
 * https://github.com/rhinodavid/grpc-tools-node-protoc-promise-ts
 *
 * package: test
 * file: test.proto
 * generated at: Mon Sep 21 2020 03:15:20 GMT-0600 (Mountain Daylight Time)
 */

/* tslint:disable */
/* eslint-disable */

import * as grpc from \\"grpc\\";
import * as test_pb from \\"./test_pb\\";
import { TDuplexRpc, TUnaryRpc } from \\"grpc-promise-ts\\";

interface ITestService
  extends grpc.ServiceDefinition<grpc.UntypedServiceImplementation> {
  duplex: ITestService_Iduplex;
  duplex: ITestService_Iduplex;
  duplex: ITestService_Iduplex;
  duplex: ITestService_Iduplex;
}

interface ITestService_Iduplex
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/duplex\\"
  requestStream: boolean; // true
  responseStream: boolean; // true
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}
interface ITestService_Iduplex
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/duplex\\"
  requestStream: boolean; // true
  responseStream: boolean; // true
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}
interface ITestService_Iduplex
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/duplex\\"
  requestStream: boolean; // true
  responseStream: boolean; // true
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}
interface ITestService_Iduplex
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/duplex\\"
  requestStream: boolean; // true
  responseStream: boolean; // true
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}

export const TestService: ITestService;

export interface ITestServer {
  duplex: grpc.handleBidiStreamingCall<test_pb.MessageA, test_pb.MessageB>;
  duplex: grpc.handleBidiStreamingCall<test_pb.MessageA, test_pb.MessageB>;
  duplex: grpc.handleBidiStreamingCall<test_pb.MessageA, test_pb.MessageB>;
  duplex: grpc.handleBidiStreamingCall<test_pb.MessageA, test_pb.MessageB>;
}

export interface ITestClient {
  duplex(): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    options: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    metadata: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    options: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    metadata: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    options: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    metadata: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    options: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    metadata: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
}

export class TestClient extends grpc.Client implements ITestClient {
  constructor(
    address: string,
    credentials: grpc.ChannelCredentials,
    options?: object
  );
  public duplex(
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public duplex(
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public duplex(
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public duplex(
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public duplex(
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public duplex(
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public duplex(
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public duplex(
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
}

/**
 * Interface and class to declare a Test client that has been promisifyed with the
 * \`grpc-promise-ts\` (https://github.com/rhinodavid/grpc-promise-ts) package
 */
export interface ITestPromiseClient {
  duplex: TDuplexRpc<test_pb.MessageA, test_pb.MessageB>;
  duplex: TDuplexRpc<test_pb.MessageA, test_pb.MessageB>;
  duplex: TDuplexRpc<test_pb.MessageA, test_pb.MessageB>;
  duplex: TDuplexRpc<test_pb.MessageA, test_pb.MessageB>;
}

export class TestPromiseClient extends grpc.Client
  implements ITestPromiseClient {
  // This class cannot be directly instantiated.
  // To get an instance of TestPromiseClient, first create
  // a TestClient and then pass it to the \`convertToPromiseClient\`
  // function in the \`gprc-promise-ts\` package
  public duplex: TDuplexRpc<test_pb.MessageA, test_pb.MessageB>;
  public duplex: TDuplexRpc<test_pb.MessageA, test_pb.MessageB>;
  public duplex: TDuplexRpc<test_pb.MessageA, test_pb.MessageB>;
  public duplex: TDuplexRpc<test_pb.MessageA, test_pb.MessageB>;

  // TODO: add other types of RPCs
}
"
`;

exports[`gRCP service definitions generates grpc service definition: test.proto_service 1`] = `
"/**
 *       ***************************************
 *          AUTOGENERATED FILE - DO NOT EDIT
 *       ***************************************
 *
 * This file was generated by grpc-tools-node-protoc-promise-ts
 * https://github.com/rhinodavid/grpc-tools-node-protoc-promise-ts
 *
 * package: test
 * file: test.proto
 * generated at: Mon Sep 21 2020 03:15:20 GMT-0600 (Mountain Daylight Time)
 */

/* tslint:disable */
/* eslint-disable */

import * as grpc from \\"grpc\\";
import * as test_pb from \\"./test_pb\\";

interface ITestService
  extends grpc.ServiceDefinition<grpc.UntypedServiceImplementation> {
  duplex: ITestService_Iduplex;
  duplex: ITestService_Iduplex;
}

interface ITestService_Iduplex
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/duplex\\"
  requestStream: boolean; // true
  responseStream: boolean; // true
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}
interface ITestService_Iduplex
  extends grpc.MethodDefinition<test_pb.MessageA, test_pb.MessageB> {
  path: string; // \\"/test.Test/duplex\\"
  requestStream: boolean; // true
  responseStream: boolean; // true
  requestSerialize: grpc.serialize<test_pb.MessageA>;
  requestDeserialize: grpc.deserialize<test_pb.MessageA>;
  responseSerialize: grpc.serialize<test_pb.MessageB>;
  responseDeserialize: grpc.deserialize<test_pb.MessageB>;
}

export const TestService: ITestService;

export interface ITestServer {
  duplex: grpc.handleBidiStreamingCall<test_pb.MessageA, test_pb.MessageB>;
  duplex: grpc.handleBidiStreamingCall<test_pb.MessageA, test_pb.MessageB>;
}

export interface ITestClient {
  duplex(): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    options: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    metadata: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    options: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  duplex(
    metadata: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
}

export class TestClient extends grpc.Client implements ITestClient {
  constructor(
    address: string,
    credentials: grpc.ChannelCredentials,
    options?: object
  );
  public duplex(
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public duplex(
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public duplex(
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
  public duplex(
    metadata?: grpc.Metadata,
    options?: Partial<grpc.CallOptions>
  ): grpc.ClientDuplexStream<test_pb.MessageA, test_pb.MessageB>;
}
"
`;
